--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "start:dev": "node --watch dist",
     "build": "tsc",
     "build:dev": "tsc --watch",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest",
+    "test:dev": "jest --watchAll",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -17,23 +20,41 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.3",
     "@commitlint/config-conventional": "^17.6.3",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.13",
+    "@types/debug": "^4.1.8",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.1",
+    "@types/lint-staged": "^13.2.0",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^20.1.2",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
+    "chalk": "^4.1.2",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^0.57.0",
     "husky": "^8.0.0",
-    "typescript": "^5.0.4",
-    "@types/express": "^4.17.17",
-    "@types/lint-staged": "^13.2.0",
-    "@types/morgan": "^1.9.4",
+    "jest": "^29.5.0",
+    "jest-ts-webcompat-resolver": "^1.0.0",
     "lint-staged": "^13.2.2",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.4"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validation": "^4.1.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongodb-memory-server": "^8.12.2",
+    "mongoose": "^7.2.1",
     "morgan": "^1.10.0"
   }
 }
