Delete connection data

--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,5 @@
 DEBUG=api:*
 PORT=4000
 ALLOWED_ORIGINS=http://localhost:3000
-MONGODB_CONNECTION=mongodb+srv://marcmoreno112:marcmoreno112@cluster0.jnl7let.mongodb.net/ag
+MONGODB_CONNECTION=
 JWT_SECRET=unapalabraSECRETA!!
